--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,7 +1,7 @@
 [[client-cfg-autoinstallation-autoyast]]
 == Autoinstallation with {ay}
 
-To start an autoinstallation the system must be known to {productname} already.
+To start an autoinstallation the system must already be known to {productname}.
 You can use Bare-metal Provisioning to bring systems into {productname}.
 For more information, see xref:reference:admin/bare-metal-systems.adoc[].
 
