--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -22,7 +22,7 @@ spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<n
 
 === Advanced PXE Installation Configuration
 
-The btn:[Create PXE installation configuration] option can be used if the system should be installed for the first time.
+If the client needs to be installed for the first time, you can use the [guimenu]``Create PXE installation configuration`` option.
 A PXE boot configuration will be created.
 When you power on the client system it is booting from the network and the correct profile will be selected for installation.
 
