--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -2,7 +2,7 @@
 == Autoinstallation with {ay}
 
 To start an autoinstallation the system must already be known to {productname}.
-You can use Bare-metal Provisioning to bring systems into {productname}.
+You can use bare metal provisioning to bring systems into {productname}.
 For more information, see xref:reference:admin/bare-metal-systems.adoc[].
 
 On the command line, you can use the API calls [systemitem]``system.createSystemRecord`` or [systemitem]``system.createSystemProfile`` to bring systems into {productname}.
