--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -12,7 +12,7 @@ For example (replace [literal]``<hw_addr>`` with a hardware address such as [lit
 spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<name>"}]' system.createSystemProfile
 ----
 
-.Procedure
+.Procedure: Autoinstalling with {ay}
 . Navigate to menu:Systems[Overview], and select the system for the automated installation.
 
 . On the systems details page, click menu:Provisioning[Autoinstallation > Schedule] and select the {ay} profile you want to use to (re-)install the system.
