--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -15,7 +15,7 @@ spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<n
 .Procedure: Autoinstalling with {ay}
 . In {productname} {webui}, navigate to menu:Systems[Overview], and select the system for the automated installation.
 
-. On the systems details page, click menu:Provisioning[Autoinstallation > Schedule] and select the {ay} profile you want to use to (re-)install the system.
+. On the systems details page, navigate to the menu:Provisioning[Autoinstallation > Schedule] tab, and select the {ay} profile you want to use to (re-)install the system.
 
 
 
