--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -23,7 +23,7 @@ spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<n
 
 If the client needs to be installed for the first time, you can use the [guimenu]``Create PXE installation configuration`` option.
 This option creates a PXE boot configuration.
-When you power on the client system it is booting from the network and the correct profile will be selected for installation.
+When you power on the client system, it boots from the network and the correct profile is selected for installation.
 
 If the system is already managed you can click btn:[Schedule Autoinstallation and Finish] to start the installation.
 
