--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -25,6 +25,6 @@ If the client needs to be installed for the first time, you can use the [guimenu
 This option creates a PXE boot configuration.
 When you power on the client system, it boots from the network and the correct profile is selected for installation.
 
-If the system is already managed you can click btn:[Schedule Autoinstallation and Finish] to start the installation.
+If the system is already managed, click btn:[Schedule Autoinstallation and Finish] to start the installation.
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
