--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -18,7 +18,8 @@ This base channel must represent the distribution you want to install.
 It can be the [guimenu]``Vendor``, [guimenu]``Custom``, or [guimenu]``Cloned Channels``.
 * The [guimenu]``Installer Generation`` should also match.
 * Optionally, you can specify kernel options which should be added when booting this distribution.
-NOTE: There are multiple places where kernel options can be provided. Only add options here that are generic for the distribution.
+Note that there are multiple places where you can provide kernel options. 
+Only add options here that are generic for the distribution.
 . Click btn:[Create Autoinstallable Distribution].
 
 For more information, see xref:reference:systems/autoinst-distributions.adoc[].
