--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -42,7 +42,7 @@ For more information about the ``Kickstart`` wizard, see xref:reference:systems/
 
 == Upload a Profile
 
-You provide a label for the profile and select an ``Autoinstallation Tree`` (distribution) that you want to use for this profile.
+Profiles require a label, and an ``Autoinstallation Tree`` (distribution).
 
 // Virtualization type.
 // later?  and again kernel options.
