--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -66,7 +66,7 @@ http://$redhat_management_server/ks/dist/child/<channel-label>/<distribution-lab
 ----
 
 * Replace [literal]``<channel-label>`` and [literal]``<distribution-label>`` with the correct labels.
-It often makes sense to use a variable for `distribution-label`.
+You can also use a variable for `distribution-label`.
 Ensure that the distribution label corresponds to the Autoinstallable Distribution you have selected.
 You can only configure "child channels" here. These channels must be children of the base channel you selected in the distribution you use for this profile.
 +
