--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -50,12 +50,8 @@ Profiles require a label, and an ``Autoinstallation Tree`` (distribution).
 Upload the ``Kickstart`` or ``AutoyaST`` profile.
 You can either write the profile within the {webui} or create it externally and then upload it.
 
-[NOTE]
-====
 AutoYaST is able to dump a profile from an existing installation.
 This can be used as template that some adaptions to be usable from {productname}:
-====
-
 
 * Change the [literal]``add-on`` section and add {productname} URLs.
 These URLs must have a special format:
@@ -117,22 +113,22 @@ In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can d
 Some common variables are:
 
 redhat_management_server::
-the server {redhat} clients register to (automatically set).
+The server {redhat} clients register to (automatically set).
 org::
-the organization ID where this profile is created (automatically set).
+The organization ID where this profile is created (automatically set).
 registration_key::
-the key used in the registration snippets.
+The key used in the registration snippets.
 By specifying this variable, you can set the activation key to be used to register the system.
 dont_register::
-if specified, the registration will be skipped.
+If specified, the registration will be skipped.
 allow_config_actions::
-if set to ``1``, it will allow traditional configuration management (traditional only).
+If set to ``1``, it will allow traditional configuration management (traditional only).
 allow_remote_commands::
-if set to ``1``, it will allow traditional remote command execution (traditional only).
+If set to ``1``, it will allow traditional remote command execution (traditional only).
 dont_disable_automatic_onlineupdate::
-if set, the automatic online update will stay enabled (SUSE OSes only).
+If set, the automatic online update will stay enabled (SUSE OSes only).
 dont_disable_local_repos::
-if set, local repositories will stay active (not recommended).
+If set, local repositories will stay active (not recommended).
 
 Navigate to menu:Systems[Autoinstallation > Autoinstallation Snippets] to see which snippets are available.
 For more information, see xref:reference:systems/autoinst-snippets.adoc[].
