--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -48,7 +48,7 @@ Profiles require a label, and an ``Autoinstallation Tree`` (distribution).
 // later?  and again kernel options.
 
 Upload the ``Kickstart`` or ``AutoyaST`` profile.
-You can either write the profile within the {webui} or create it externally and then upload it.
+You can write your own kickstart or {ay} profile directly in the {webui}, or create the profile and upload it from your local filesystem.
 
 AutoYaST is able to dump a profile from an existing installation.
 This can be used as template that some adaptions to be usable from {productname}:
