--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -51,7 +51,8 @@ Upload the ``Kickstart`` or ``AutoyaST`` profile.
 You can write your own kickstart or {ay} profile directly in the {webui}, or create the profile and upload it from your local filesystem.
 
 AutoYaST is able to dump a profile from an existing installation.
-This can be used as template that some adaptions to be usable from {productname}:
+This can be used as template, but will need to be edited to make it usable by {productname}:
+
 
 * Change the [literal]``add-on`` section and add {productname} URLs.
 These URLs must have a special format:
