--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -65,7 +65,8 @@ http://$redhat_management_server/ks/dist/child/<channel-label>/<distribution-lab
 * Replace [literal]``<channel-label>`` and [literal]``<distribution-label>`` with the correct labels.
 You can also use a variable for `distribution-label`.
 Ensure that the distribution label corresponds to the autoinstallable distribution you selected.
-You can only configure "child channels" here. These channels must be children of the base channel you selected in the distribution you use for this profile.
+You can only configure child channels in this file. 
+The channels must be children of the base channel you selected in the distribution you use for this profile.
 +
 [NOTE]
 ====
