--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -71,7 +71,7 @@ The channels must be children of the base channel you selected in the distributi
 [NOTE]
 ====
 You do not need to specify a base channel.
-You defined the base channel in the distribution already.
+The base channel is defined in the distribution.
 ====
 
 * Register the system after it is installed.
