--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -99,7 +99,7 @@ For traditional clients, use the `spacewalk/sles_register_script` snippet:
 +
 [IMPORTANT]
 ====
-When registering with Salt, the Salt key must be accepted on the {productname} Server before the autoinstallation procedure could be finished.
+For registering Salt clients, you must accept the Salt key on the {productname} Server before you attempt autoinstallation.
 ====
 
 For more information about autoinstallation profiles, see xref:reference:systems/autoinst-profiles.adoc[].
