--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -108,7 +108,7 @@ For more information about autoinstallation profiles, see xref:reference:systems
 
 ==== Variables and snippets
 
-The final state of a profile is composed when a client requests it.
+Profiles are not finalized until they are requested by a client.
 This allows you using variables in profiles.
 In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can define variables.
 
