--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -109,7 +109,7 @@ For more information about autoinstallation profiles, see xref:reference:systems
 ==== Variables and snippets
 
 Profiles are not finalized until they are requested by a client.
-This allows you using variables in profiles.
+This allows you to use variables in profiles.
 In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can define variables.
 
 Some common variables are:
