--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -110,7 +110,7 @@ For more information about autoinstallation profiles, see xref:reference:systems
 
 Profiles are not finalized until they are requested by a client.
 This allows you to use variables in profiles.
-In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can define variables.
+You can define profile variables in the {webui} by navigating to menu:Profiles[Variables].
 
 Some common variables are:
 
