--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -75,7 +75,7 @@ You will need to install and configure a PXE server, ensure DHCP is running, and
 
 Upload the {ay} profile to the {productname} Server using the {productname} {webui}.
 
-When the {ay} profile has been created, use the URL from the menu:Autoinstallation Overview[] page as the image location.
+When the {ay} profile has been created, use the URL from the [guimenu]``Autoinstallation Overview`` page as the image location.
 
 For more information about PXE boot, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-deployment-prep-pxe.html
 
