fix broken xref

--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -17,6 +17,6 @@ The {productname} Server then acts as a TFTP server.
 
 The TFTP environment is generated with Cobbler.
 Cobbler can also generate a bootable ISO image.
-The ISO image can be used to install machines when PXE boot is not an option; for more information, see xref:client-configuration:cobbler.html#_build_isos_with_cobbler[].
+The ISO image can be used to install machines when PXE boot is not an option; for more information, see xref:client-configuration:cobbler.adoc[].
 // Cobbler allows you to automate bare-metal installations.
 // It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
