--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -10,6 +10,12 @@ This image shows the main ports used in {productname}:
 
 image::ports_diagram.png[]
 
+In this section:
+
+* External inbound port: a port to be opened on the {productname} Server or Proxy
+* External outbound port: a destination port that the {productname} Server or Proxy can use to open connections
+* Internal port: a port only used internally, that is only accessible from ``localhost``.
+
 
 
 == External Server Ports
