--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -1,14 +1,18 @@
 [[db-migration]]
 = Database Migration
 
-This is about PostgreSQL database migration.
+This section covers upgrading the PostgreSQL database from version 9 to version 10.
+If you are already using PostgreSQL 10, you do not need to perform this migration.
 
-If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
-If you are already using PostreSQL 10, skip this section.
+If you want to upgrade to the latest {productname} version, you must be using PostgreSQL version 10.
 If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the {productname} migration.
 // 2019-10-16, ke: I think we'd better keep the info on 9.4 for the moment
-If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation at https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
+
+[IMPORTANT]
+====
+If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the product documentation at https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
 You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
+====
 
 
 
@@ -31,7 +35,7 @@ You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 [[db-migration-prepare]]
 == Prepare to Upgrade
 
-Before you begin the upgrade, prepare your existing 3.2 system and create a database backup.
+Before you begin the upgrade, prepare your existing {productname} Server and create a database backup.
 
 PostgreSQL stores data at [path]``/var/lib/pgsql/data/``.
 
@@ -44,7 +48,8 @@ psql --version
 ----
 +
 If you are using PostgreSQL{nbsp}9.6, you can upgrade to PostgreSQL{nbsp}10.
-
++
+If you are already using PostgreSQL 10, you do not need to perform this migration.
 . Check the active smdba version:
 +
 ----
