fixed heading level

--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -18,7 +18,7 @@ This base channel must represent the distribution you want to install.
 It can be the [guimenu]``Vendor``, [guimenu]``Custom``, or [guimenu]``Cloned Channels``.
 * The [guimenu]``Installer Generation`` should also match.
 * Optionally, you can specify kernel options which should be added when booting this distribution.
-Note that there are multiple places where you can provide kernel options. 
+Note that there are multiple places where you can provide kernel options.
 Only add options here that are generic for the distribution.
 . Click btn:[Create Autoinstallable Distribution].
 
@@ -65,7 +65,7 @@ http://$redhat_management_server/ks/dist/child/<channel-label>/<distribution-lab
 * Replace [literal]``<channel-label>`` and [literal]``<distribution-label>`` with the correct labels.
 You can also use a variable for `distribution-label`.
 Ensure that the distribution label corresponds to the autoinstallable distribution you selected.
-You can only configure child channels in this file. 
+You can only configure child channels in this file.
 The channels must be children of the base channel you selected in the distribution you use for this profile.
 +
 [NOTE]
@@ -106,7 +106,7 @@ For more information about autoinstallation profiles, see xref:reference:systems
 
 
 
-==== Variables and snippets
+=== Variables and snippets
 
 Profiles are not finalized until they are requested by a client.
 This allows you to use variables in profiles.
