--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -30,7 +30,7 @@ image::image-building.png[scaledwidth=80%]
 === Requirements
 
 
-The containers feature is available for Salt clients running {sls} 12 or later.
+The containers feature is available for Salt clients running {sles} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
 * A published git repository repository containing a dockerfile and configuration scripts.
@@ -249,7 +249,7 @@ An Image Profile that can be reused is published at https://github.com/SUSE/mana
 [NOTE]
 ====
 The [option]``ARG`` parameters ensure that the built image is associated with the desired repository version served by {productname}.
-The [option]``ARG`` parameters also allow you to build image versions of {sls} which may differ from the version of {sls} used by the build host itself.
+The [option]``ARG`` parameters also allow you to build image versions of {sles} which may differ from the version of {sles} used by the build host itself.
 
 For example: The [comand]``ARG repo`` parameter and the [command]``echo`` command pointing to the repository file, creates and then injects the correct path into the repository file for the desired channel version.
 
@@ -384,8 +384,8 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 [[at.images.kiwi.requirements]]
 === Requirements
 
-The Kiwi image building feature is available for Salt clients running {sls}{nbsp}12.
-From {sls}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
+The Kiwi image building feature is available for Salt clients running {sles}{nbsp}12.
+From {sles}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
 Kiwi image configuration files and configuration scripts must be accessible in one of these locations:
 
@@ -410,7 +410,7 @@ For more information, see the documentation of the underlying system.
 
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS Image build hosts are Salt clients running {sls}{nbsp}12 (SP3 or later) or 15.
+OS Image build hosts are Salt clients running {sles}{nbsp}12 (SP3 or later) or 15.
 This procedure will guide you through the initial configuration for a build host.
 
 From the {productname} {webui}, perform these steps to configure a build host:
