--- a/modules/administration/pages/tshoot-rpctimeout.adoc
+++ b/modules/administration/pages/tshoot-rpctimeout.adoc
@@ -37,7 +37,7 @@ server.timeout =`number`
 ----
 proxy.timeout =`number`
 ----
-. On a {sls} client that uses zypper, open the [filename]``/etc/zypp/zypp.conf`` file and set a maximum timeout value (in seconds):
+. On a {sles} client that uses zypper, open the [filename]``/etc/zypp/zypp.conf`` file and set a maximum timeout value (in seconds):
 +
 ----
 ## Valid values:  [0,3600]
