--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -19,7 +19,7 @@ When a machine is to receive a network-based {ay} installation, the following ev
 . After being connected to the network and turned on, the machine's PXE logic broadcasts its MAC address and requests to be discovered.
 . If no static IP address is used, the DHCP server recognizes the discovery request and offers network information needed for the new machine to boot. This includes an IP address, the default gateway to be used, the netmask of the network, the IP address of the TFTP or HTTP server holding the bootloader program, and the full path and file name to that program (relative to the server's root).
 . The machine applies the networking information and initiates a session with the server to request the bootloader program.
-. The bootloader searches for its configuration file on the server from which it was loaded. This file dictates which Kernel and Kernel options, such as the initial RAM disk (initrd) image, should be executed on the booting machine. Assuming the bootloader program is SYSLINUX, this file is located in the [path]``pxelinux.cfg`` directory on the server and named the hexadecimal equivalent of the new machine's IP address. For example, a bootloader configuration file for {sls} should contain:
+. The bootloader searches for its configuration file on the server from which it was loaded. This file dictates which Kernel and Kernel options, such as the initial RAM disk (initrd) image, should be executed on the booting machine. Assuming the bootloader program is SYSLINUX, this file is located in the [path]``pxelinux.cfg`` directory on the server and named the hexadecimal equivalent of the new machine's IP address. For example, a bootloader configuration file for {sles} should contain:
 +
 
 ----
@@ -55,7 +55,7 @@ If you are using static IP addresses, you should select static IP while developi
 == Build a Bootable ISO
 
 You will need to create a bootable ISO image to be used by the target system for installation.
-When the system is rebooted or switched on, it boots from the image, loads the {ay} configuration from your {productname}, and installs {sls} according to the {ay} profile.
+When the system is rebooted or switched on, it boots from the image, loads the {ay} configuration from your {productname}, and installs {sles} according to the {ay} profile.
 
 To use the ISO image, boot the system and type `autoyast` at the prompt (assuming you left the label for the {ay}  boot as ``autoyast``).
 Press kbd:[Enter] to begin the {ay}  installation.
