--- a/modules/client-configuration/pages/clients-and-activation-keys.adoc
+++ b/modules/client-configuration/pages/clients-and-activation-keys.adoc
@@ -27,7 +27,7 @@ image::provision-config-keys.png[scaledwidth=80%]
 . Click the btn:[Create Key] button.
 . On the [guimenu]``Activation Key Details`` page, in the [guimenu]``Description`` field, enter a name for the activation key.
 . In the [guimenu]``Key`` field, enter the distribution and service pack associated with the key.
-For example, ``SLES12-SP4`` for {sls}{nbsp}12{nbsp}SP4.
+For example, ``SLES12-SP4`` for {sles}{nbsp}12{nbsp}SP4.
 +
 [IMPORTANT]
 ====
