--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -468,7 +468,7 @@ cobbler add profile --name=virtualfileserver \
   --distro=sles12-x86_64-server --virt-file-size=20 --virt-ram=1000
 ----
 
-This profile is for a fileserver running {sls}{nbsp}12 with a 20{nbsp}GB guest image size and allocated 1{nbsp}GB of system RAM.
+This profile is for a fileserver running {sles}{nbsp}12 with a 20{nbsp}GB guest image size and allocated 1{nbsp}GB of system RAM.
 To find the name of the virtual guest system profile, use the [command]``koan`` command:
 
 ----
