--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -13,7 +13,7 @@ It is important that you check the repository information carefully, to ensure i
 If the repository information does not match exactly, the bootstrap script will not be able to download the correct packages.
 
 If you are bootstrapping Salt clients using the {webui}, you will need to ensure that the client system has Python installed before you begin.
-For Salt clients running {sls}{nbsp}12 or older, you will also require the [package]``python-xml`` package.
+For Salt clients running {sles}{nbsp}12 or older, you will also require the [package]``python-xml`` package.
 
 
 [IMPORTANT]
