--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -88,13 +88,13 @@ The hostname should contain less than eight characters and must not contain any
 
 == Installing {productname} on {ibmz}
 
-This section covers the installation of {productname}{nbsp}{productnumber} as an extension to {sls}{nbsp}{sles-version}{nbsp}{sp-version}.
+This section covers the installation of {productname}{nbsp}{productnumber} as an extension to {sles}{nbsp}{sles-version}{nbsp}{sp-version}.
 
 // TBD: Is this correct? SUSE Manager as an extension? Doesn't SLES15SP1 on z also have the new module concept with SUSE Manager being a base product?
 
 For more information on deploying SLES {sles-version}{nbsp}{sp-version} on your hardware, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-zseries.html.
 
-. Install {sls}{nbsp}{sles-version}{nbsp}{sp-version} from the installation media, and select {productname} as an extension.
+. Install {sles}{nbsp}{sles-version}{nbsp}{sp-version} from the installation media, and select {productname} as an extension.
 . If you have not already done so, set up any additional storage required for [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` and swap space using the {yast} partitioner tool.
 This must be set up before you continue with installation.
 . Perform a {yast} online update and reboot the system.
