--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -59,7 +59,7 @@ SUSEConnect --status-text
 
 For {productname} Proxy, the expected modules are:
 
-* {sls} Basesystem Module
+* {sles} Basesystem Module
 * Server Applications Module
 * SUSE Manager Proxy Module
 
