--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -36,8 +36,8 @@ Mandatory modules are pre-selected and you cannot disable them.
 +
 
 image::unifiedinstaller-addon.png[scaledwidth=80%]
-. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next]. 
-We do not recommend that you run any other workloads on {productname}. 
+. OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
+We do not recommend that you run any other workloads on {productname}.
 Only use add-ons that you absolutely require, such as driver repositories from your hardware vendor.
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, either accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
@@ -61,7 +61,7 @@ On the [guimenu]``Installation Settings`` screen click btn:[Install].
 When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {susemgr} Server, the expected modules are:
 
-* {sls} Basesystem Module
+* {sles} Basesystem Module
 * Python 2 Module
 * Server Applications Module
 * Web and Scripting Module
