--- a/modules/installation/pages/pubcloud-setup.adoc
+++ b/modules/installation/pages/pubcloud-setup.adoc
@@ -31,7 +31,7 @@ SUSEConnect --status-text
 
 For {productname} Server on a public cloud, the expected modules are:
 
-* {sls} Basesystem Module
+* {sles} Basesystem Module
 * Python 2 Module
 * Server Applications Module
 * Web and Scripting Module
