--- a/modules/reference/pages/software/software-channel-list-menu.adoc
+++ b/modules/reference/pages/software/software-channel-list-menu.adoc
@@ -14,8 +14,8 @@ There are two types of software channels: base channels and child channels.
 [[s3-sm-channel-list-base]]
 Base Channels::
 A base channel consists of packages built for a specific architecture and release.
-For example, all of the packages in {sls}{nbsp}12 for the `x86_64` architecture make up a base channel.
-The list of packages in {sls}{nbsp}12 for the `s390x` architecture make up a different base channel.
+For example, all of the packages in {sles}{nbsp}12 for the `x86_64` architecture make up a base channel.
+The list of packages in {sles}{nbsp}12 for the `s390x` architecture make up a different base channel.
 +
 
 A system must be subscribed to only one base channel assigned automatically during registration based on the {sle} release and system architecture.
@@ -25,7 +25,7 @@ For paid base channels, an associated subscription must exist.
 [[sm-channel-list-child]]
 Child Channels::
 A child channel is associated with a base channel and provides extra packages.
-For example, an organization can create a child channel associated with {sls} on `x86_64` architecture that contains extra packages for a custom application.
+For example, an organization can create a child channel associated with {sles} on `x86_64` architecture that contains extra packages for a custom application.
 +
 
 Especially important are the {productname} Tools channels that are available for every base channel.
