--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -2,7 +2,7 @@
 = Installing with the Unified Installer
 
 {smr} 4.0 is a {suse} base product.
-This section describes how to install {smr} from {sls} installation media with the Unified Installer.
+This section describes how to install {smr} from {sles} installation media with the Unified Installer.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:installation:general-requirements.adoc[].
@@ -65,7 +65,7 @@ When the installation procedure has finished, you can check that all the require
 Use the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {smr}, the expected modules are:
 
-* {sls} Basesystem Module
+* {sles} Basesystem Module
 * Python 2 Module
 * Server Applications Module
 * SUSE Manager Proxy Module
