--- a/modules/salt/pages/salt-config-management.adoc
+++ b/modules/salt/pages/salt-config-management.adoc
@@ -88,11 +88,11 @@ E.g.:
 == Pillar Data
 
 
-SUSE Manager exposes a small amount of internal data as Pillars which can be used with custom {sls} states.
+SUSE Manager exposes a small amount of internal data as Pillars which can be used with custom {sles} states.
 Data that is exposed includes group membership, organization membership, and file roots.
 These are managed either automatically by {productname}, or manually by the user.
 
-To avoid hard-coding organization IDs within {sls} files, a pillar entry is added for each organization:
+To avoid hard-coding organization IDs within {sles} files, a pillar entry is added for each organization:
 
 ----
 org-files-dir: relative_path_to_files
