--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -66,7 +66,7 @@ Pillars are managed either automatically by {productname}, or manually by the us
 For more information on pillars, see https://docs.saltstack.com/en/latest/topics/tutorials/pillar.html.
 
 
-To avoid hard-coding organization IDs within {sls} files, a pillar entry is added for each organization:
+To avoid hard-coding organization IDs within {sles} files, a pillar entry is added for each organization:
 
 ----
 org-files-dir: relative_path_to_files
