--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -7,7 +7,7 @@ Beacons allow you to use the Salt event system to monitor non-Salt processes.
 Clients can use beacons to connect to various system processes for constant monitoring.
 When a monitored activity occurs, an event is sent on the Salt event bus that can then trigger a reactor.
 
-To use beacons on {sls} Salt clients, install the [package]``python-pyinotify`` package.
+To use beacons on {sles} Salt clients, install the [package]``python-pyinotify`` package.
 For {rhel} systems, install the [package]``python-inotify`` package.
 
 For more information on beacons, see https://docs.saltstack.com/en/latest/topics/beacons/
