--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -34,7 +34,7 @@
 :sp-version-l: sp1
 :jeos: JeOS
 :scc: SUSE Customer Center
-:sls: SUSE Linux Enterprise Server
+:sles: SUSE Linux Enterprise Server
 :sle: SUSE Linux Enterprise
 :sleses: SUSE Linux Enterprise Server with Expanded Support
 :slesesa: Expanded Support
