--- a/modules/administration/pages/autoyast-example.adoc
+++ b/modules/administration/pages/autoyast-example.adoc
@@ -5,7 +5,7 @@
 [[advanced.topics.app.ay.example-simple]]
 == Minimalist AutoYaST Profile for Automated Installations and Useful Enhancements
 
-The {ay} profile in this section installs a {sls} system with all default installation options including a default network configuration using DHCP.
+The {ay} profile in this section installs a {sles} system with all default installation options including a default network configuration using DHCP.
 After the installation is finished, a bootstrap script located on the {productname} server is executed in order to register the freshly installed system with {productname}.
 You need to adjust the IP address of the {productname} server, the name of the bootstrap script, and the root password according to your environment:
 
