--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -27,7 +27,7 @@ It is also not possible to use {slsa} for SAP as a base for {productname} to inc
 [[install.scc-register]]
 == Obtain Your SUSE Customer Center Credentials
 
-Create an account with {scc} before installation of {sls} and {productname}.
+Create an account with {scc} before installation of {sles} and {productname}.
 
 [[creating.scc.account.mgr]]
 .Procedure: Obtaining Your SCC Organization Credentials
