--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -18,7 +18,7 @@ This can include database entries of registered systems, Salt pillar data for im
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
 // REMARK: Check version number
-Build hosts should be based on {sls}{nbsp}12 SP3 or SP4.
+Build hosts should be based on {sles}{nbsp}12 SP3 or SP4.
 
 
 
@@ -46,7 +46,7 @@ The minimum memory requirement is 1 GB for hosts that need to run OS images bui
 
 *Hardware Requirements for PoS Terminals:*
 . At least 1 GB of RAM.
-For more information, see the documentation of the underlying system (in this case: {sls}{nbsp}12).
+For more information, see the documentation of the underlying system (in this case: {sles}{nbsp}12).
 . Disk space depending on the image size.
 
 For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration:client-config-overview.adoc[]).
