--- a/modules/retail/pages/retail-delta-images.adoc
+++ b/modules/retail/pages/retail-delta-images.adoc
@@ -36,7 +36,7 @@ retail_create_delta POS_Image_JeOS6-6.0.1 POS_Image_JeOS6-6.0.0
 ----
 
 This command will generate the delta image between version 6.0.0 and version 6.0.1.
-The resulting delta file is saved in [path]``/srv/www/os-images`` and the corresponding {sls} file in [path]``/srv/susemanager/pillar_data/images/``.
+The resulting delta file is saved in [path]``/srv/www/os-images`` and the corresponding {sles} file in [path]``/srv/susemanager/pillar_data/images/``.
 
 
 
