--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -5,7 +5,7 @@ This section contains information about registering traditional and Salt clients
 
 [IMPORTANT]
 ====
-{centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {slesesa}.
+{centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {es}.
 You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to the {centos} content delivery network.
 ====
 
