--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -211,15 +211,15 @@ This procedure applies to both traditional and Salt minions.
 
 .Procedure: Adding Client Tools Channels
 
-. On the {productname} Server, add the appropriate {slesesa} channels:
+. On the {productname} Server, add the appropriate {es} channels:
 +
-* For {slesesa} 6:
+* For {es} 6:
 +
 From the {webui}, add [systemitem]``RHEL6 Base x86_64`` and [systemitem]``SUSE Linux Enterprise Client Tools RES6 x86_64``.
 +
 From the command prompt, add [systemitem]``rhel-x86_64-server-6`` and [systemitem]``res6-suse-manager-tools-x86_64``.
 +
-* For {slesesa} 7:
+* For {es} 7:
 +
 From the {webui}, add [systemitem]``RHEL7 Base x86_64`` and [systemitem]``SUSE Linux Enterprise Client Tools RES7 x86_64``.
 +
@@ -344,7 +344,7 @@ You need to modify the activation keys you used for RHEL systems to include the 
 == Trust GPG Keys on Clients
 
 ifeval::[{suma-content} == true]
-By default, {rhel} does not trust the GPG key for {productname} {slesesa} client tools.
+By default, {rhel} does not trust the GPG key for {productname} {es} client tools.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
