--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -37,7 +37,7 @@
 :sls: SUSE Linux Enterprise Server
 :sle: SUSE Linux Enterprise
 :sleses: SUSE Linux Enterprise Server with Expanded Support
-:slesesa: Expanded Support
+:es: Expanded Support
 :slsa: SLES
 :suse: SUSE
 :slea: SLE
