--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -1,11 +1,11 @@
 [[clients-sleses]]
 = Registering {sleses} Clients
 
-This section contains information about registering traditional and Salt clients running {sleses} ({slesesa}) operating systems.
+This section contains information about registering traditional and Salt clients running {sleses} ({es}) operating systems.
 
-{slesesa} clients are based on {rhel} or {centos}.
+{es} clients are based on {rhel} or {centos}.
 
-They are sometimes also called SLESES, RES or {redhat} {slesesa}.
+They are sometimes also called SLESES, RES or {redhat} {es}.
 
 
 [IMPORTANT]
@@ -16,7 +16,7 @@ You are responsible for arranging access to {redhat} or {centos} base media repo
 ifeval::[{suma-content} == true]
 [IMPORTANT]
 ====
-You must obtain support from {suse} for all your {slesesa} systems.
+You must obtain support from {suse} for all your {es} systems.
 ====
 endif::[]
 
@@ -24,7 +24,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-{suse} does not provide support for {slesesa} systems on {uyuni}.
+{suse} does not provide support for {es} systems on {uyuni}.
 ====
 endif::[]
 
@@ -51,32 +51,32 @@ systemctl restart taskomatic
 == Add Client Tools
 
 
-For {slesesa} clients, some required packages are contained on the {rhel} or {centos} installation media.
-You must have these packages installed before you can register a {slesesa} client.
+For {es} clients, some required packages are contained on the {rhel} or {centos} installation media.
+You must have these packages installed before you can register a {es} client.
 
-The {slesesa} product is provided by {scc}.
+The {es} product is provided by {scc}.
 This also includes the client tools package.
 
-Before you register {slesesa} clients to your {productname} Server, check that you have the corresponding {slesesa} product enabled, and the required channels are fully synchronized.
+Before you register {es} clients to your {productname} Server, check that you have the corresponding {es} product enabled, and the required channels are fully synchronized.
 
-You need to select two different sets of channels, one for {slesesa} and the other for the Client Tools.
+You need to select two different sets of channels, one for {es} and the other for the Client Tools.
 
-You will need an activation key associated with the correct {slesesa} channels.
+You will need an activation key associated with the correct {es} channels.
 For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
 
 
 
 .Procedure: Adding Client Tools Channels
 
-. On the {productname} Server, add the appropriate {slesesa} channels:
+. On the {productname} Server, add the appropriate {es} channels:
 +
-* For {slesesa} 6:
+* For {es} 6:
 +
 From the {webui}, add [systemitem]``RHEL6 Base x86_64`` and [systemitem]``SUSE Linux Enterprise Client Tools RES6 x86_64``.
 +
 From the command prompt, add [systemitem]``rhel-x86_64-server-6`` and [systemitem]``res6-suse-manager-tools-x86_64``.
 +
-* For {slesesa} 7:
+* For {es} 7:
 +
 From the {webui}, add [systemitem]``RHEL7 Base x86_64`` and [systemitem]``SUSE Linux Enterprise Client Tools RES7 x86_64``.
 +
@@ -101,7 +101,7 @@ You will need to check all the base and child channel log files to be sure that 
 
 [NOTE]
 ====
-The {slesesa} channels can be very large.
+The {es} channels can be very large.
 The initial channel synchronization can sometimes take up to 24 hours.
 
 When the initial synchronization is complete, we recommended you clone the channel before you work with it.
@@ -113,8 +113,8 @@ This gives you a backup of the original synchronization data.
 === Add Base Media
 
 
-The base {slesesa} channel does not contain any packages, because {suse} does not provide {rhel} or {centos} base media.
-You will need to obtain base media from {redhat} or {centos}, which you can add as a child channel to the {slesesa} parent channel.
+The base {es} channel does not contain any packages, because {suse} does not provide {rhel} or {centos} base media.
+You will need to obtain base media from {redhat} or {centos}, which you can add as a child channel to the {es} parent channel.
 
 You can use {productname} custom channels to set up the {rhel} or {centos} media.
 All packages on the base media are mirrored into a child channel.
@@ -205,8 +205,8 @@ unset URLGRABBER_DEBUG
 
 
 
-== Register {slesesa} Clients
+== Register {es} Clients
 
-You {slesesa} clients are now ready to be registered.
+You {es} clients are now ready to be registered.
 
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
