--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -1,14 +1,14 @@
 [[live-patching-sles15]]
-= Live Patching on {slsa}{nbsp}15
+= Live Patching on SLES{nbsp}15
 
-On {slsa}{nbsp}15 systems and newer, live patching is managed by the [systemitem]``klp livepatch`` tool.
+On SLES{nbsp}15 systems and newer, live patching is managed by the [systemitem]``klp livepatch`` tool.
 
 Before you begin, ensure:
 
 * {productname} is fully updated
-* You have one or more Salt clients running {slsa}{nbsp}15 (SP1 or later)
-* Your {slsa}{nbsp}15 Salt clients are registered with {productname}
-* You have access to the {slsa}{nbsp}15 channels appropriate for your architecture, including the Live Patching child channel (or channels)
+* You have one or more Salt clients running SLES{nbsp}15 (SP1 or later)
+* Your SLES{nbsp}15 Salt clients are registered with {productname}
+* You have access to the SLES{nbsp}15 channels appropriate for your architecture, including the Live Patching child channel (or channels)
 * The clients are fully synchronized
 
 .Procedure: Setting up for Live Patching
