--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -111,7 +111,7 @@ or:
 ----
 . Delete the files containing the machine IDs:
 +
-* {slsa}{nbsp}12:
+* SLES{nbsp}12:
 +
 ----
 # rm /etc/machine-id
@@ -119,13 +119,13 @@ or:
 # dbus-uuidgen --ensure
 # systemd-machine-id-setup
 ----
-* {slsa}{nbsp}11:
+* SLES{nbsp}11:
 +
 ----
 # suse_register -E
 ----
 . Remove the credential files:
-* {slsa} clients:
+* SLES clients:
 +
 ----
 # rm -f /etc/zypp/credentials.d/{SCCcredentials,NCCcredentials}
