--- a/modules/client-configuration/pages/creating-a-tools-repository.adoc
+++ b/modules/client-configuration/pages/creating-a-tools-repository.adoc
@@ -41,7 +41,7 @@ The client tools repository is located in [path]``/srv/www/htdocs/pub/repositori
 
 .Procedure: Specify a Bootstrap Repository
 
-If you have mirrored more than one {sle}{nbsp}15 Product (for example, {slsa} and {slsa} for SAP), you can specify the one you are actually interested in.
+If you have mirrored more than one {sle}{nbsp}15 Product (for example, SLES and SLES for SAP), you can specify the one you are actually interested in.
 
 . Check what bootstrap repositories you have available:
 +
