--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -14,7 +14,7 @@ This section also includes information about administering your virtual guests a
 
 The way that you set up Xen or KVM on a VM host depends on what operating system you want to use on its associated guests.
 
-For {suse} operating systems, see the {slsa} Virtualization Guide available from https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-virt.html.
+For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP1/html/SLES-all/book-virt.html.
 
 For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
@@ -83,17 +83,17 @@ Salt clients can be created using a template disk image, but not by using {ay} o
 You will need to create an autoinstallable distribution on the VM host to be able to autoinstall clients from {productname}.
 The distribution can be made available from a mounted local or remote directory, or on a loop-mounted ISO image.
 
-The configuration of the autoinstallable distribution will differ depending on whether you are using a {slsa} or {rhel} operating system on your guests.
+The configuration of the autoinstallable distribution will differ depending on whether you are using a SLES or {rhel} operating system on your guests.
 The packages for a {rhel} installation are fetched from the associated base channel.
 Packages for installing {suse} systems are fetched from the autoinstallable distribution.
-Therefore, for {slsa} systems, the autoinstallable distribution must be a complete installation source.
+Therefore, for SLES systems, the autoinstallable distribution must be a complete installation source.
 
 .Paths for autoinstallable distributions
 [cols="1,1,1", options="header"]
 |===
 | Operating System Type | Kernel Location | initrd Location
 | {rhel} | [path]``images/pxeboot/vmlinuz``    | [path]``images/pxeboot/initrd.img``
-| {slsa} | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
+| SLES | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
 |===
 
 In all cases, ensure that the base channel matches the autoinstallable distribution.
@@ -131,7 +131,7 @@ They can also contain scripts to be executed after the installation is complete.
 You can also create {ay} or {kickstart} autoinstallation profiles by hand.
 
 An example {ay} profile that includes a script for registering the client with {productname} is available in xref:administration:autoyast-example.adoc[].
-If you are using {ay} to install {slsa}, you will also need to include this snippet:
+If you are using {ay} to install SLES, you will also need to include this snippet:
 
 ----
 <products config:type="list">
