--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -12,7 +12,7 @@ This section does not cover the variety of hardware configuration profiles avail
 
 Before you begin, check that your environment meets the base system requirements.
 
-The base system for {productname}{nbsp}{productnumber} is {slsa}{nbsp}{sles-version}{nbsp}{sp-version}.
+The base system for {productname}{nbsp}{productnumber} is SLES{nbsp}{sles-version}{nbsp}{sp-version}.
 
 .Compatible {ibmz} Systems:
 
