--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -9,8 +9,7 @@ This book provides guidance on installing {productname}.
 
 ifeval::[{suma-content} == true]
 
-From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy are available as base products, and can be installed with the {slsa} Unified Installer.
+From SLES{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy are available as base products, and can be installed with the SLES Unified Installer.
 This is the default method of installation.
 
 endif::[]
-
