--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -304,14 +304,14 @@ However, it is possible to clone systems and register them successfully by delet
 . On the cloned system, change the hostname and IP addresses, and check the [path]``/etc/hosts`` file to ensure you have the right host entries.
 . On traditional clients, stop the [command]``rhnsd`` daemon with [command]``/etc/init.d/rhnsd stop`` or, on newer systemd-based systems, with [command]``service rhnsd stop``.
 Then [command]``service osad stop``.
-. For {slsa} 11 or {rhel} 5 or 6 clients, run these commands:
+. For SLES 11 or {rhel} 5 or 6 clients, run these commands:
 +
 ----
 # rm /var/lib/dbus/machine-id
 # dbus-uuidgen --ensure
 ----
 +
-. For {slsa} 12 or {rhel} 7 clients, run these commands:
+. For SLES 12 or {rhel} 7 clients, run these commands:
 +
 ----
 # rm /etc/machine-id
@@ -347,13 +347,13 @@ Each operating system stores the minion ID file in a slightly different location
 [cols="1,1", options="header"]
 |===
 | Operating System | Commands
-| {slsa} 12        | [command]``rm /etc/salt/minion_id``
+| SLES 12        | [command]``rm /etc/salt/minion_id``
 
                      [command]``rm  -f /etc/zypp/credentials.d/{SCCcredentials,NCCcredentials}``
-| {slsa} 11        | [command]``rm /etc/salt/minion_id``
+| SLES 11        | [command]``rm /etc/salt/minion_id``
 
                      [command]``suse_register -E``
-| {slsa} 10        | [command]``rm -rf /etc/{zmd,zypp}``
+| SLES 10        | [command]``rm -rf /etc/{zmd,zypp}``
 
                      [command]``rm -rf /var/lib/zypp/``
                      Do not delete [path]``/var/lib/zypp/db/products/``
