--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -14,12 +14,12 @@ This section contains more information on each of these requirements.
 
 [IMPORTANT]
 ====
-{productname} {productnumber} is based on {slsa} {sles-version} {sp-version} as the host operating system.
+{productname} {productnumber} is based on SLES {sles-version} {sp-version} as the host operating system.
 {productname} comes with a maintenance lifecycle of two years.
 For more information, see link:https://www.suse.com/lifecycle/[].
 
 Long Term Service Pack Support (LTSS) for {sles-version} cannot be added to {productname}.
-It is also not possible to use {slsa} for SAP as a base for {productname} to increase the lifecycle of the underlying operating system.
+It is also not possible to use SLES for SAP as a base for {productname} to increase the lifecycle of the underlying operating system.
 ====
 
 
@@ -50,12 +50,12 @@ Depending on your organization's setup, you might also need to activate your sub
 //REMARK What about Uyuni?
 ifeval::[{suma-content} == true]
 You only require a valid registration code for {productname}.
-You do not require a separate code for {slsa}{nbsp}{sles-version} {sp-version}.
+You do not require a separate code for SLES{nbsp}{sles-version} {sp-version}.
 endif::[]
 
 If not already done, download the {sle} Unified Installer from https://download.suse.com/index.jsp.
 Direct link to {sle} 15 SP1, required to install SUSE Manager 4.0: https://download.suse.com/index.jsp?product_id=&search=Search&families=22609&version=68287.
-With the Unified Installer you can install many SLE-based base products such as {slsa}, {slsa} for SAP Applications, or {susemgr}.
+With the Unified Installer you can install many SLE-based base products such as SLES, SLES for SAP Applications, or {susemgr}.
 
 
 
@@ -66,7 +66,7 @@ In order to use the {webui} to manage your {susemgr} environment, you will need 
 
 {susemgr} is supported on:
 
-* Latest Firefox browser shipped with {slsa}
+* Latest Firefox browser shipped with SLES
 * Latest Chrome browser on all operating systems
 * Latest Edge browser shipped with Windows
 
