--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -153,22 +153,22 @@ salt <branch_server_salt_id> state.apply image-sync
 
 
 
-== Terminals Based on {slsa}{nbsp}11 SP{nbsp}3
+== Terminals Based on SLES{nbsp}11 SP{nbsp}3
 
 POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
-* You must use the {slsa}{nbsp}11 template
-* {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP3 i586`` and [systemitem]``SLEPOS 11 SP3 i586`` channels
+* You must use the SLES{nbsp}11 template
+* SLES{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP3 i586`` and [systemitem]``SLEPOS 11 SP3 i586`` channels
 
 [IMPORTANT]
 ====
-Ensure that {slsa}{nbsp}11 images are built on the {slsa}{nbsp}11 build host, and {slsa}{nbsp}12 images are built on the {slsa}{nbsp}12 build host.
+Ensure that SLES{nbsp}11 images are built on the SLES{nbsp}11 build host, and SLES{nbsp}12 images are built on the SLES{nbsp}12 build host.
 Building on the incorrect build host will cause your build to fail.
 ====
 
 [WARNING]
 ====
-If you are building images for {slsa}{nbsp}11 using profiles from an HTTPS git repository that uses TLS 1.0 or greater, it will fail.
-{slsa}{nbsp}11 does not support later versions of TLS.
+If you are building images for SLES{nbsp}11 using profiles from an HTTPS git repository that uses TLS 1.0 or greater, it will fail.
+SLES{nbsp}11 does not support later versions of TLS.
 You will need to clone the repository locally in order to use it for building.
 ====
